# drone

./: .gitignore  LICENSE  README.md
3dp/: Readme.md  bottom.step  bottom.stl  complete.step  frame-PartTop.step  frame.FCStd  legs.step  legs.stl  lr-frame.FCStd  screensholder.FCStd  tie_point.step  tiepoint.step  top.step  top.stl
3dp/five_inch/: bottom.stl  five_inch.FCStd  gps_plate.step  gps_plate.stl  legs.step  legs.stl  tie_point.stl
3dp/seven_inch/: arm.step  arm.stl  center.step  center.stl  gps_plate.step  gps_plate.stl  legs.step  legs.stl  seven_inch.FCStd  top.step  top.stl  whole_assembly.step  whole_assembly.stl
body/: drone-PartBody.stl  drone.FCStd  drone.FCStd1  mpuholder-Bottom.stl  mpuholder.FCStd  mpuholder.FCStd1  tuningjig-DroneAttachment.stl  tuningjig-Pin.stl  tuningjig-Post.stl  tuningjig-Span27.stl  tuningjig-Span566.stl  tuningjig.FCStd  tuningjig.FCStd1
body2/: body.FCStd  body.FCStd1  drone2-DroneArm.stl  drone2.FCStd  drone2.FCStd1
body3/: body3.FCStd  body3.FCStd1
body4/: body.FCStd  body.FCStd1
body5/: body5.FCStd  body5.FCStd1
body6/: body6.FCStd  body6.FCStd1  screensholder.FCStd
code/: CMakeLists.txt  Cargo.toml  Embed.toml  Readme.md  build.rs  rust-toolchain.toml
code/.cargo/: config.toml
code/.zed/: settings.json
code/common/: Cargo.toml  settings.json
code/common/.cargo/: config.toml
code/common/src/: crc8.rs  lib.rs  msp_protocol.rs  shared_objects.rs
code/common/src/configurator_protocol/: messages.rs  protocol.rs
code/common/src/msp_protocol/: displayport.rs  messages.rs  protocol.rs
code/configurator/: Cargo.toml
code/configurator/.cargo/: config.toml
code/configurator/src/: drone_connection.rs  main.rs
code/configurator/src/gui/: logic.rs  mod.rs  visual.rs
code/dronecode/: bluetooth.cpp  bluetooth.h  commandimpl.cpp  commandimpl.h  commands.cpp  commands.h  common.h  debug.h  dronecode.cpp  dronecode.ino  motion.cpp  motion.h  motors.cpp  motors.h  mpucalib.cpp  mpucalib.h  navigation.cpp  navigation.h  storage.cpp  storage.h
code/dronecode/common/: common_stuff.h  drone_debug.h  drone_error.h  drone_mcucomm.h
code/dronecode/controller/: atmelports.h  bluetooth.cpp  bluetooth.h  commandimpl.cpp  commandimpl.h  commands.cpp  commands.h  common.h  controller.cpp  motion.cpp  motion.h  motors.cpp  motors.h  mpucalib.cpp  navigation.cpp  navigation.h  storage.h
code/dronecode/driver/: common.h  driver.cpp  motors.cpp  motors.h
code/flight_controller/: Cargo.toml  build.rs  rust-toolchain.toml
code/flight_controller/memory-configs/: memory_f411.x
code/flight_controller/src/: battery_monitor.rs  channel_mapping.rs  crsf.rs  flight_control.rs  icm42688.rs  main.rs  math_stuff.rs  mixer.rs  motors.rs  navigation_utils.rs  nopdelays.rs  pid.rs  shared_state.rs  stored_config.rs
code/flight_controller/src/configurator/: configurator_communication.rs  configurator_loop.rs  mod.rs
code/flight_controller/src/four_way/: esc_control.rs  four_way_esc.rs  mod.rs
code/flight_controller/src/hal/: config_storage.rs  mcu_utils.rs  mod.rs  motor_layout.rs  servo.rs  spi_port.rs  usb_port.rs
code/flight_controller/src/logging/: mod.rs
code/flight_controller/src/model/: mod.rs
code/flight_controller/src/motor/: esc_dshot.rs  esc_serial.rs  mod.rs
code/flight_controller/src/msp/: mod.rs  msp_displayport.rs  protocol.rs  usb_communication.rs
code/flight_controller/src/osd/: char_map_hdzero_inav.rs  msp_osd.rs
code/memory-configs/: memory_h723.x  memory_h743.x
code/pycontrol/: MainWindow.py  commands_base.py  commands_gen.py  dronecontrol.py  generate_commands.py  main.py  storage_base.py  storage_gen.py
code/rustdrone/common/: Cargo.toml
code/rustdrone/common/src/: command.rs  lib.rs  storedvars.rs
code/rustdrone/controller/: Cargo.toml
code/rustdrone/controller/src/: main.rs
code/rustdrone/dronecode/: Cargo.toml  rust-toolchain.toml
code/rustdrone/dronecode/src/: bluetooth.rs  commands.rs  crsf.rs  dshot.rs  icm42688.rs  main.rs  motors.rs  mpu6050.rs  navigation.rs  nopdelays.rs  storage.rs
code/src/: ahrs_wrapper.rs  arming.rs  battery_monitor.rs  channel_mapping.rs  config_storage.rs  crsf.rs  dshot.rs  expo_rates.rs  flight_control.rs  gps.rs  icm42688.rs  main.rs  math_stuff.rs  mcu_utils.rs  mixer.rs  motors.rs  msp.rs  msp_displayport.rs  msp_osd.rs  navigation.rs  nopdelays.rs  pid.rs  shared_state.rs  static_buffer.rs  storage.rs  stored_config.rs
code/src/flight_control/: angle_mode.rs  mod.rs  waypoint_nav.rs
code/src/four_way/: esc_control.rs  four_way_esc.rs
code/src/hal/: config_storage.rs  esc_soft_serial.rs  leds.rs  mcu_utils.rs  mod.rs  motor_layout.rs  optional_output.rs  servo.rs  spi_port.rs  uart_port.rs  usb_port.rs  voltage_reader.rs
code/src/hal/implementations/: mod.rs  stm32f411.rs  stm32h723.rs  stm32h743.rs
code/src/hw_select/: mod.rs  stm32f411.rs  stm32h723.rs  stm32h743.rs
code/src/logging/: mod.rs  rtt_logging.rs  usb_logging.rs
code/src/model/: five_inch.rs  mod.rs  seven_inch.rs  wing.rs
code/src/msp/: mod.rs  msp_displayport.rs  protocol.rs  usb_passthrough.rs
code/src/navigation/: math.rs  mod.rs
code/src/osd/: char_map_hdzero_inav.rs  mod.rs  msp_osd.rs
customboard/controller/: controller.ino
customboard/droneboard/: bom.xlsx  droneboard-all.pos  droneboard.kicad_pcb  droneboard.kicad_pro  droneboard.kicad_sch  sym-lib-table
customboard/droneboardf411/: Readme.md
customboard/droneboardf411USB/: droneboard.kicad_pcb  droneboard.kicad_pro
customboard/droneboardf411USB/components/: LICENSE
customboard/droneboardh7/: bom.xlsx  droneboard.kicad_pcb  droneboard.kicad_pro  droneboard.kicad_sch  ~droneboard.kicad_sch.lck
customboard/droneboardh743_bga/: droneboard.kicad_pcb  droneboard.kicad_pro  droneboard.kicad_sch  sym-lib-table
customboard/esc/: bom.xlsx  esc.kicad_pcb  esc.kicad_pro  esc.kicad_sch
dronecode/: Makefile  bluetooth.cpp  bluetooth.h  commands.cpp  commands.h  common.h  dronecode.ino  motors.cpp  storage.h
hardware/: LICENSE
hardware/esc/: Readme.md
pycontrol/: dronecontrol.py
(+81 files in other folders)
