[package]
edition = "2021"
name = "rustdrone"
version = "0.1.0"
license = "MIT"

[[bin]]
name = "rustdrone"
test = false
doctest = false
bench = false

[dependencies]
embassy-stm32 = { version = "0.4.0", features = [
    "unstable-pac",
    "memory-x",
    "time-driver-any",
    "exti",
    "chrono",
] }

embassy-sync = { version = "0.7.2" }

embassy-executor = { version = "0.9.0", features = [
    "arch-cortex-m",
    "executor-interrupt",
] }

embassy-futures = { version = "0.1.2" }
embassy-time = { version = "0.5.0", features = ["tick-hz-1_000_000"] }
embassy-usb = { version = "0.5.1", features = [], optional = true }
embassy-usb-logger = { version = "0.5.1", features = [], optional = true }
log = { version = "0.4", optional = true }

defmt = { version = "1.0.1", optional = true }
defmt-rtt = { version = "1.0.0", optional = true }

cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.5"
embedded-hal = "1.0.0"
embedded-io = { version = "0.6.0" }
embedded-io-async = { version = "0.6.1" }
panic-probe = { version = "0.3", features = ["print-defmt"], optional = true}
zerocopy = { version = "0.8.24", features = ["derive"] }
static_cell = "2.1.0"
ahrs = { version = "0.7.0", default-features = false }
nalgebra = { version = "0.33.2", default-features = false }

[profile.release]
debug = 2
lto = true
codegen-units = 1
opt-level = 3

[dependencies.num-traits]
version = "0.2"
default-features = false
features = ["libm"]

[features]
default = ["usb-logging", "stm32h743", "five-inch"]
stm32f411 = ["embassy-stm32/stm32f411ce"]
stm32h723 = ["embassy-stm32/stm32h723vg"]
stm32h743 = ["embassy-stm32/stm32h743vi"]
rtt-logging = ["dep:defmt-rtt", "dep:defmt", "embassy-stm32/defmt", "panic-probe"]
usb-logging = [
    "dep:embassy-usb",
    "dep:embassy-usb-logger",
    "dep:log",
    "embassy-stm32/log",
]
dummy_osd = []
flash_storage = []
five-inch = []
seven-inch = []
