[package]
name = "controller"
version = "0.1.0"
edition = "2021"

[dependencies]
bluer = {version="0.17.3", features=["rfcomm", "bluetoothd"]}
tokio = {version="1.39.3", features=["macros", "rt-multi-thread"]}
zerocopy = {version="0.7.35", features=["derive", "byteorder"]}
common = {path = "../common"}
rand = "0.8.5"
gilrs = "0.10.9"
fltk = "1.4.33"
fltk-theme = "0.7.3"
